# tui-settings-manager

./: README.md  pyproject.toml
tui_settings_manager/: main.py
tui_settings_manager/features/settings/: settings.py
tui_settings_manager/static/: style.tcss
